--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -6,7 +6,7 @@
 
 header{
   background: black;
-  background-image: url("https://pasik97.github.io/DESVN/img/MainPage/background-img-main.png");
+  background-image: url("../img/MainPage/background-img-main.png");
   background-size: cover;
   background-color: black;
   background-attachment: fixed;
