--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -183,8 +183,8 @@ header a:hover{
   font-size: 10px;
 }
 
-.line-main{
-  margin: 15px 0px 15px 25px;
+.line-main1{
+  margin: 0px 0px 15px 25px;
   width: 40px;
   height: 2px;
   background-color: white;
