--- a/style/styleProjects.css
+++ b/style/styleProjects.css
@@ -1,5 +1,6 @@
 #projects{
   position: relative;
+  min-height: 100vh;
 }
 
 .lines-projects{
@@ -70,6 +71,8 @@
 }
 
 .project img {
+  width: 100%;
+  height: 100%;
   transition: all 0.4s;
 }
 
