--- a/style/styleProjects.css
+++ b/style/styleProjects.css
@@ -70,17 +70,17 @@
   order: 1;
 }
 
-.project img {
+.project-photo img {
   width: 100%;
   height: 100%;
   transition: all 0.4s;
 }
 
-.project:hover img {
+.project-photo:hover  {
   transform: scale(1.1);
 }
 
-.project:hover{
+.project-photo:hover{
   cursor: pointer;
 }
 
@@ -105,13 +105,6 @@
   margin: 0px 0px 0px 3px;
 }
 
-.info{
-  background-color: black;
-  width: 100%;
-  min-height: 200px;
-  display: none;
-}
-
 .number-page-container3{
   background-color: white;
   padding-left: 25px;
@@ -125,4 +118,248 @@
   font-size: 10px;
   z-index: 0;
   order: 1;
+}
+
+.info{
+  background-color: #151515;
+  width: 100%;
+  display: none;
+}
+
+.carousel{
+  max-width: 50%;
+  min-width: 50%;
+  min-height: 100%;
+  position: relative;
+  margin: 0px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.slide img{
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.slide{
+  min-width: 100%;
+  min-height: 100%;
+  display: none;
+  font-size: 0px;
+}
+
+.prev, .next{
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: rgb(153,154,154);
+  font-weight: bold;
+  font-size: 25px;
+  transition: 0.3s;
+  border-radius: 3px 3px 3px 3px;
+}
+
+.next {
+  right: 0;
+  margin-right: 40px;
+}
+
+.prev{
+  margin-left: 40px;
+}
+
+.prev:hover, .next:hover {
+  color: rgb(0,0,0);
+}
+
+.dot-container{
+    position: absolute;
+    bottom: 15%;
+    left: calc(50% - 14px);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0px 7px 0px 7px;
+  background-color: rgb(174,175,175);
+  display: inline-block;
+  transition: background-color 0.3s ease;
+}
+
+.dot:hover {
+  background-color: inherit;
+  border: 2px solid rgb(15,183,242);
+}
+
+.active{
+  height: 20px;
+  width: 20px;
+  background-color: inherit;
+  border: 2px solid rgb(15,183,242);
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2s;
+  animation-name: fade;
+  animation-duration: 1s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+.info-container{
+  display: flex;
+}
+
+.content-info-container{
+  max-width: 50%;
+  min-width: 50%;
+  position: relative;
+}
+
+.detail-content img{
+  max-width: 38px;
+}
+
+.info-close-button span{
+  position: absolute;
+  right: 15px;
+  top: 10px;
+
+
+  min-height: 2px;
+  min-width: 20px;
+  background-color: white;
+
+  margin: 12px 7px 12px 7px;
+}
+
+.info-close-button span:first-child{
+  transform: rotate(45deg);
+}
+
+.info-close-button span:last-child{
+  transform: rotate(-45deg);
+}
+
+
+.content-info-title{
+  display: flex;
+  flex-direction: row;
+  align-content: flex-start;
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-size: 2.3vw;
+  font-size-adjust: 0.5;
+  padding-left: 5%;
+  margin-top: 5%;
+  padding-bottom: 2.5%;
+  border-bottom: 2px solid rgb(93,93,93);
+}
+
+.info-content{
+  max-width: 600px;
+  margin-left: 5%;
+  margin-top: 4%;
+
+  color: white;
+  font-family: Varela;
+  font-size: 0.9vw;
+  line-height: 1.5vw;
+}
+
+.info-details-container{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  max-height: 38%;
+  max-width: 600px;
+  margin-left: 5%;
+}
+
+.detail{
+  margin-top: 4%;
+  margin-left: 0%;
+  margin-right: 0px;
+  font-family: Varela;
+  font-size: 0.85vw;
+  color: white;
+}
+
+.detail-content{
+  margin-top: 10%;
+  color: rgb(15,183,242);
+  line-height: 25px;
+}
+
+.info-footer{
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  left: 5%;
+  bottom: 5%;
+  min-width: 100%;
+}
+
+.number-photo{
+  display: flex;
+  flex-direction: row;
+  margin-left: 0px;
+  margin-right: 0px;
+  font-family: Varela;
+  font-weight: bold;
+}
+
+.display-photo{
+  font-size: 2.5vw;
+  color: white;
+  margin-left: 0px;
+}
+
+.number-of-photos{
+  font-size: 1.1vw;
+  color: rgb(140,140,140);
+  padding-top: 8%;
+}
+
+.info-footer a{
+  width: auto;
+  padding: 10px 40px 10px 40px;
+  border: solid rgb(15,183,242) 2px;
+
+  color: white;
+  font-weight: bold;
+  font-family: Montserrat, sans-serif;
+  font-size: 14px;
+  text-decoration: none;
+
+  transition: 0.3s;
+  margin-left: 25%;
+}
+
+.info-footer a:hover{
+  background-color: rgb(15,183,242);
+  color: white;
+  cursor: pointer;
 }
