--- a/style/styleMobile.css
+++ b/style/styleMobile.css
@@ -1,6 +1,8 @@
 @media only screen and (max-width: 600px) {
   /* Main Page */
   header{
+    -webkit-background-position: center;
+    -webkit-background-size: auto;
     background-position: center;
   }
 
