--- a/style/styleMobile.css
+++ b/style/styleMobile.css
@@ -50,7 +50,8 @@
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
-    font-size: 2.9vw;
+    font-size: 2.5vw;
+    line-height: 5vw;
   }
 
   .number-page-container2{
