--- a/style/styleMobile.css
+++ b/style/styleMobile.css
@@ -1,9 +1,9 @@
 @media only screen and (max-width: 500px) {
   /* Main Page */
   header{
-    -webkit-background-position: center;
-    -webkit-background-size: cover;
-    background-position: center;
+    -webkit-background-position: center center;
+    -webkit-background-size: center center;
+    background-position: center center;
   }
 
   .design{
@@ -52,6 +52,7 @@
     text-align: center;
     font-size: 2.5vw;
     line-height: 5vw;
+    max-width: 100%;
   }
 
   .number-page-container2{
