--- a/style/styleMobile.css
+++ b/style/styleMobile.css
@@ -29,6 +29,7 @@
 
   .about-container{
     flex-direction: column;
+    max-width: 100%;
   }
 
   .about-container figure{
@@ -53,6 +54,7 @@
     font-size: 2.5vw;
     line-height: 3vw;
     max-width: 100%;
+    text-wrap: wrap;
   }
 
   .number-page-container2{
