--- a/style/styleMobile.css
+++ b/style/styleMobile.css
@@ -57,6 +57,7 @@
     text-align: center;
     font-size: 2.5vw;
     line-height: 3vw;
+    width: auto;
     max-width: 100%;
     text-wrap: wrap;
   }
