--- a/style/styleMobile.css
+++ b/style/styleMobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   html{
     max-width: 100%;
   }
@@ -9,12 +9,24 @@
     background-position: center center;
   }
 
+  .container-name{
+    margin-top: 50%;
+  }
+
   .design{
     padding-top: 30px;
   }
 
   .go-about, .number-page-container{
     opacity: 0;
+  }
+
+  .social{
+    margin-left: 60%;
+  }
+
+  .social:last-child{
+    margin-right: 0px;
   }
 
   /* About Page */
@@ -25,6 +37,7 @@
   #about{
     min-height: auto;
     max-width: 100%;
+    padding: 15px 15px 15px 15px;
   }
 
   .about-title{
@@ -52,15 +65,12 @@
   }
 
   .content{
-    padding-left: 0px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     text-align: center;
-    font-size: 2.5vw;
-    line-height: 3vw;
+    font-size: 3.3vw;
+    line-height: 3.5vw;
     width: auto;
     max-width: 100%;
-    text-wrap: wrap;
   }
 
   .number-page-container2{
@@ -140,6 +150,7 @@
   /* CV Page */
   #cvs{
     min-height: auto;
+    padding: 15px 15px 15px 15px;
   }
 
   .lines-cv{
@@ -203,9 +214,9 @@
   }
 
   .mail-form input:last-child{
+    display: block;
     margin: 0 auto;
     margin-top: 30px;
-    margin-left: 34%;
   }
   /* Footer */
   .line-footer-1{
